# Deskman

./: .gitignore  CMakeLists.txt  README.md  build.sh  deskman.txt  install_requirements.sh  run.cpp  teleport.txt
bark.cpp/: bark.cpp
bark.cpp/encodec.cpp/ggml/: CMakeLists.txt  requirements.txt
bark.cpp/encodec.cpp/ggml/src/: CMakeLists.txt
bark.cpp/examples/: common.cpp  common2.h
examples/: CMakeLists.txt
listen/stream/: CMakeLists.txt  image.cpp  stream.cpp
servos/: INST.h  SCS.cpp  SCS.h  SCSerial.h  SMS_STS.cpp  SMS_STS.h  Serial.h  main.cpp  test.c  test.cpp
src/: .bashrc  CMakeLists.txt  box.cpp  box.h  build.sh  camera.cpp  camera.hpp  face.cpp  face.h  face_tracker.cpp  face_tracker.hpp  image.cpp  image.h  install copy.sh  install.sh  install2.sh  main.cpp  robot.service  screen.cpp  screen.h  servos.cpp  servos.h  speak.cpp  speak.h  stream.cpp  vector_renderer.cpp  vector_renderer.h
src/cpp/: CMakeLists.txt  camera.cpp  camera.hpp  face_tracker.cpp  face_tracker.hpp  main.cpp  test_camera.cpp  test_libcamera.cpp
src/include/: base64.hpp  lws_config.h
src/lib/: libwebsockets.19.dylib  libwebsockets.dylib  libwebsockets.so.19
src/local/: CMakeLists2.txt  bark.cpp  face.cpp  image.cpp  image.h  main.cpp  servos.cpp  servos.h  stream.cpp
src/local/barkdir.cpp/: CMakeLists.txt
src/local/barkdir.cpp/encodec.cpp/: CMakeLists.txt  encodec.cpp
src/local/barkdir.cpp/examples/: CMakeLists.txt
src/local/whisper/cmake/: DefaultTargetOptions.cmake
src/local/whisper/ggml/src/ggml-cpu/: CMakeLists.txt
src/local/whisper/listen/: common-sdl.cpp
src/microcontroller/: microcontroller.ino
src/py/: detection.py  face.py  go  install.sh  servo.py
src/servos/: SCSerial.cpp  Serial.h  build.sh
talk/: CMakeLists.txt  build.sh  face.h  hey_robot_pi.ppn  main.cpp  screen.cpp  speak.cpp  speak.py  talk.py
whisper/: CMakeLists.txt  whisper.cpp
whisper/ggml/src/ggml-metal/: ggml-metal-embed.metal
whisper/listen/: CMakeLists.txt
